[package]

name = "par-vec"
version = "0.0.1"
license = "MIT/Apache-2.0"
description = "A wrapper of `Vec` that provides safe, concurrent mutation of non-overlapping slices."
authors = [
	"Austin Bonander <austin.bonander@gmail.com>"
]

repository = "https://github.com/contain-rs/par-vec"
homepage = "https://github.com/contain-rs/par-vec"
documentation = "https://contain-rs.github.io/par-vec/par-vec"
keywords = ["data-structures", "parallel"]
readme = "README.md"

[features]
bench = ["rand", "threadpool"]

[dependencies.rand]
version = "*"
optional = true

[dependencies.threadpool]
version = "*"
optional = true
